# wail

./: .gitignore  CLAUDE.md  PLUGINS.md  README.md
.claude/: settings.local.json
backend/: .env.example  cache.py  create_plugin.py  credentials.py  dev_sandbox.py  evals.py  example_usage.py  main.py  mcp_server.py  pyproject.toml  registry.py  requirements.txt  shared_config.py  tenant.py  wail.py  wail_testing.py
backend/connections/: base.py  google_calendar.py  oauth.py  payment.py  stripe_payment.py
backend/integrations/: base.py  booking.py  calendar.py  filters.py  google_calendar.py  payment.py  registry.py  trust.py
backend/protocols/: base.py  mcp.py  openapi.py
backend/routers/: auth.py  booking.py  calendar.py  config.py  deps.py  payment.py  plugins.py  trust.py
backend/tests/: conftest.py  test_wail_testing.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/dashboard/booking/: page.tsx
frontend/app/dashboard/calendar/: page.tsx
frontend/app/dashboard/endpoints/: page.tsx
frontend/app/dashboard/integrations/: page.tsx
frontend/app/dashboard/trust/: page.tsx
